product service final